--- a/FinanceManagement/FinanceManagement/Views/Lancamentos/Edit.cshtml
+++ b/FinanceManagement/FinanceManagement/Views/Lancamentos/Edit.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>Lancamento</h4>
+<h4>Editar</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -33,16 +31,16 @@
                     <input class="form-check-input" asp-for="DespesaReceita" /> @Html.DisplayNameFor(model => model.DespesaReceita)
                 </label>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Editar" class="btn btn-success" style="margin-right:10px;" />
+                <a class="btn btn-light" asp-action="index">Voltar</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
