--- a/FinanceManagement/FinanceManagement/Views/Shared/_Layout.cshtml
+++ b/FinanceManagement/FinanceManagement/Views/Shared/_Layout.cshtml
@@ -22,6 +22,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Lancamentos" asp-action="Index">Lançamentos </a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Categorias" asp-action="Index">Categorias </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Bancos" asp-action="Index">Bancos </a>
+                        </li>
                     </ul>
                     @*<partial name="_LoginPartial" />*@
                 </div>
