--- a/FinanceManagement/FinanceManagement/Views/Lancamentos/Create.cshtml
+++ b/FinanceManagement/FinanceManagement/Views/Lancamentos/Create.cshtml
@@ -27,6 +27,15 @@
                 <input asp-for="Data" class="form-control" />
                 <span asp-validation-for="Data" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Categoria" class="control-label"></label>
+                <select asp-for="Categoria" 
+                        asp-items="@(new SelectList(ViewBag.Categorias, "Value", "Text"))"  
+                        class="form-control">
+                </select>
+                
+                <span asp-validation-for="Categoria" class="text-danger"></span>
+            </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="DespesaReceita" /> @Html.DisplayNameFor(model => model.DespesaReceita)
