--- a/FinanceManagement/FinanceManagement/Views/Lancamentos/Details.cshtml
+++ b/FinanceManagement/FinanceManagement/Views/Lancamentos/Details.cshtml
@@ -1,7 +1,7 @@
-﻿@model FinanceManagement.Models.Lancamento
+﻿@model FinanceManagement.Models.ViewModels.LancamentoViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
 <div>
