--- a/FinanceManagement/FinanceManagement/Views/Shared/_Layout.cshtml
+++ b/FinanceManagement/FinanceManagement/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Bancos" asp-action="Index">Bancos </a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Contas" asp-action="Index">Contas </a>
                         </li>
                     </ul>
                     @*<partial name="_LoginPartial" />*@
