--- a/FinanceManagement/FinanceManagement/Views/Categorias/Edit.cshtml
+++ b/FinanceManagement/FinanceManagement/Views/Categorias/Edit.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Descricao" class="control-label"></label>
-                <input asp-for="Descricao" class="form-control" />
-                <span asp-validation-for="Descricao" class="text-danger"></span>
+                <label asp-for="DescCategoria" class="control-label"></label>
+                <input asp-for="DescCategoria" class="form-control" />
+                <span asp-validation-for="DescCategoria" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
