--- a/FinanceManagement/FinanceManagement/Views/Contas/Index.cshtml
+++ b/FinanceManagement/FinanceManagement/Views/Contas/Index.cshtml
@@ -1,41 +1,61 @@
-﻿@model IEnumerable<FinanceManagement.Models.Conta>
+﻿@model IEnumerable<FinanceManagement.Models.ViewModels.ContaViewModel>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Contas</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Descricao)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Saldo)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descricao)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Saldo)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div>
+    <p class="text-right">
+        <a class="btn btn-success" asp-action="Create">
+            <span class="icon bi bi-plus"></span> Nova Conta
+        </a>
+    </p>
+
+    <div class="table-responsive">
+        <table class="table table-dark table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th>
+                        Banco
+                    </th>
+                    <th>
+                        Conta
+                    </th>
+                    <th>
+                        Tipo
+                    </th>
+                    <th>
+                        Saldo
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.DescBanco)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.DescConta)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TipoConta)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Saldo)
+                        </td>
+                        <td>
+                            <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id" data-bs-toggle="tooltip" data-bs-placement="top" title="Detalhes"><span class="icon bi bi-info-circle"></span></a>
+                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id" data-bs-toggle="tooltip" data-bs-placement="top" title="Excluir"><span class="icon bi bi-trash"></span></a>
+                            <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar"><span class="icon bi bi-pencil"></span></a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
