--- a/FinanceManagement/FinanceManagement/Views/Lancamentos/Create.cshtml
+++ b/FinanceManagement/FinanceManagement/Views/Lancamentos/Create.cshtml
@@ -29,11 +29,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Categoria" class="control-label"></label>
-                <select asp-for="Categoria" 
-                        asp-items="@(new SelectList(ViewBag.Categorias, "Value", "Text"))"  
-                        class="form-control">
-                </select>
-                
+                <Select asp-for="Categoria" 
+                        asp-items="@(new SelectList(ViewBag.Categorias, "Value", "Text", "Selected"))"  
+                        class="form-control" name="Categorias">
+                </Select>
                 <span asp-validation-for="Categoria" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
