adicionado o excluir lancamento

--- a/FinanceManagement/FinanceManagement/ClientApp/src/custom.css
+++ b/FinanceManagement/FinanceManagement/ClientApp/src/custom.css
@@ -84,3 +84,11 @@ input[type="checkbox"] {
     color: green !important;
     background-color: green !important;
 }
+
+.debit {
+    color: red;
+}
+
+.credit {
+    color: green;
+}
