--- a/FinanceManagement/FinanceManagement/ClientApp/src/custom.css
+++ b/FinanceManagement/FinanceManagement/ClientApp/src/custom.css
@@ -93,10 +93,14 @@ input[type="checkbox"] {
     color: green;
 }
 
-.container-tab-menu{
+.container-tab-menu {
     margin-bottom: 40px
 }
 
 .cursor-pointer {
     cursor: pointer
+}
+
+.modal-title {
+    width: 100% !important;
 }
