--- a/FinanceManagement/FinanceManagement/wwwroot/css/site.css
+++ b/FinanceManagement/FinanceManagement/wwwroot/css/site.css
@@ -1,6 +1,18 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\
 for details on configuring this project to bundle and minify static web assets. */
 
+a{
+    color: green;
+}
+
+a:hover{
+    color: green;
+}
+
+.nav-pills .nav-link.active {
+    background-color: green !important;
+}
+
 a.navbar-brand {
     white-space: normal;
     text-align: center;
