--- a/FinanceManagement/FinanceManagement/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/FinanceManagement/FinanceManagement/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ChangePasswordModel
 @{
-    ViewData["Title"] = "Change password";
+    ViewData["Title"] = "Alterar Senha";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
@@ -11,22 +11,22 @@
     <div class="col-md-6">
         <form id="change-password-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.OldPassword"></label>
+            <div class="form-group" style="margin-bottom:5px;">
+                <label asp-for="Input.OldPassword">Senha atual</label>
                 <input asp-for="Input.OldPassword" class="form-control" />
                 <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.NewPassword"></label>
+            <div class="form-group" style="margin-bottom:5px;">
+                <label asp-for="Input.NewPassword">Nova senha</label>
                 <input asp-for="Input.NewPassword" class="form-control" />
                 <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
+            <div class="form-group" style="margin-bottom:10px;">
+                <label asp-for="Input.ConfirmPassword">Confirmar nova senha</label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Update password</button>
+            <button type="submit" class="btn btn-success">Atualizar senha</button>
         </form>
     </div>
 </div>
