--- a/FinanceManagement/FinanceManagement/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/FinanceManagement/FinanceManagement/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Profile";
+    ViewData["Title"] = "Perfil";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
@@ -11,16 +11,16 @@
     <div class="col-md-6">
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Username"></label>
+            <div class="form-group" style="margin-bottom:5px;">
+                <label asp-for="Username">Usuário</label>
                 <input asp-for="Username" class="form-control" disabled />
             </div>
-            <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
+            <div class="form-group" style="margin-bottom:10px;">
+                <label asp-for="Input.PhoneNumber">Telefone</label>
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+            <button id="update-profile-button" type="submit" class="btn btn-success">Save</button>
         </form>
     </div>
 </div>
